--- a/network_exporter.yml
+++ b/network_exporter.yml
@@ -37,21 +37,13 @@ targets:
       rack: a1
   - name: google-dns1
     host: 8.8.8.8
-    type: ICMP
-  - name: google-dns2
-    host: 8.8.4.4
-    type: MTR
-  - name: cloudflare-dns
-    host: 1.1.1.1
-    type: ICMP+MTR
-  - name: cloudflare-dns-https
-    host: 1.1.1.1:443
-    source_ip: 192.168.1.1
     type: TCP
-  - name: download-file-64M
-    host: http://test-debit.free.fr/65536.rnd
+  - name: google-dns2
+    host: 1.1.1.1
+    type: TCP
+  - name: Google-Meet
+    host: lens.l.google.com
+    type: TCP
+  - name: google-http-get
+    host: https://google.com
     type: HTTPGet
-  - name: download-file-64M-proxy
-    host: http://test-debit.free.fr/65536.rnd
-    type: HTTPGet
-    proxy: http://localhost:3128
